ingrsess/leader-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-leader-ing
  namespace: redis-operator
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - redis-leader-core.rabitabank.com
    secretName: rabbitmq-system/rabitabank.com-key-pair
  rules:
  - host: redis-leader-core.rabitabank.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-cluster-leader
            port:
              number: 6379
