ingrsess/redis-UI.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-gui
  namespace: redis-operator
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - redis-core.rabitabank.com
    secretName: rabitabank.com-key-pair
  rules:
  - host: redis-core.rabitabank.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisinsight-service
            port:
              number: 80
